developing scss styling

--- a/styles/sass/style.scss
+++ b/styles/sass/style.scss
@@ -2,3 +2,9 @@
 @import 'header';
 @import 'footer';
 @import 'media';
+@import 'mixins';
+@import 'variables';
+@import 'general';
+@import 'homePage';
+@import 'contactPage';
+@import 'blogPage';
