further positioning and styling on the header

--- a/styles/sass/_variables.scss
+++ b/styles/sass/_variables.scss
@@ -7,6 +7,10 @@ serif;
 
 /*Color Variables*/
 
+
+/*Header Colours*/
+
 $headerBase: #000000;
+$headerHover: #64A604;
 $footerBackground: #2E2E2E;
 $footerPrimary: #999999;
