--- a/styles/sass/_header.scss
+++ b/styles/sass/_header.scss
@@ -4,9 +4,59 @@ header {
     @include headBanner(url(../assets/home-1.jpeg));
 }
 
-.headNav ul {
-    list-style-type: none;
-    text-decoration: none;
+.nav__wrapper {
     display: flex;
-    font-size: 20px;
+    flex-direction: column;
+}
+
+.head__nav {
+    height: 30px;
+}
+
+.nav__list {
+    display: flex;
+    justify-content: space-between;
+    align-content: center;
+    height: 30px;
+    padding: 0;
+    margin: 0;
+}
+
+.nav__list:first-child {
+    padding-left: 3px;
+}
+
+.nav__link {
+    list-style-type: none;
+    margin: 0;
+}
+
+.nav__link a {
+    font-size: 12px;
+    text-decoration: none;
+    font-weight: 700;
+    color: $headerBase;
+    padding-right: 10px;
+}
+
+.nav__link a:hover {
+    color: $headerHover;
+}
+
+.menu__button {
+    border: none;
+    background: none;
+    font-size: 16px;
+    margin: 0;
+    padding: 0 10px;
+    position: relative;
+}
+
+.burger__menu {
+    border: none;
+    background: none;
+    font-size: 16px;
+    margin: 0;
+    padding: 0 5px;
+    position: relative;
 }
