--- a/styles/sass/_mixins.scss
+++ b/styles/sass/_mixins.scss
@@ -1,7 +1,13 @@
+@import 'variables';
 @mixin headBanner($imgUrl) {
     background-image: $imgUrl;
+    background-repeat: no-repeat;
+    background-size: 100%;
     font-family: $headFont;
-    font-size: 46px;
+    font-size: 24px;
     line-height: 24px;
     letter-spacing: 1.1px;
+    color: $headerBase;
+    text-transform: uppercase;
+    height: 100vh;
 }
