--- a/styles/sass/_contactPage.scss
+++ b/styles/sass/_contactPage.scss
@@ -1,3 +1,8 @@
 @import 'setup';
 @import 'mixins';
 @import 'variables';
+@import 'header';
+@import 'media';
+.contact__header {
+    @include headBanner(url(../assets/contact-1.jpeg));
+}
