--- a/styles/sass/_general.scss
+++ b/styles/sass/_general.scss
@@ -6,3 +6,15 @@
     max-width: 1200px;
     margin: 0 auto;
 }
+
+h1,
+h2,
+h3,
+h4 {
+    font-family: $headFont;
+    text-transform: uppercase;
+}
+
+body {
+    font-family: $baseFont;
+}
