--- a/styles/sass/_header.scss
+++ b/styles/sass/_header.scss
@@ -1,62 +1,56 @@
-@import 'mixins';
 @import 'variables';
-header {
-    @include headBanner(url(../assets/home-1.jpeg));
-}
-
 .nav__wrapper {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
+    align-content: center;
+    justify-content: space-around;
 }
 
 .head__nav {
     height: 30px;
-}
-
-.nav__list {
-    display: flex;
-    justify-content: space-between;
-    align-content: center;
-    height: 30px;
-    padding: 0;
-    margin: 0;
-}
-
-.nav__list:first-child {
-    padding-left: 3px;
-}
-
-.nav__link {
-    list-style-type: none;
-    margin: 0;
-}
-
-.nav__link a {
-    font-size: 12px;
-    text-decoration: none;
-    font-weight: 700;
-    color: $headerBase;
-    padding-right: 10px;
-}
-
-.nav__link a:hover {
-    color: $headerHover;
-}
-
-.menu__button {
-    border: none;
-    background: none;
-    font-size: 16px;
-    margin: 0;
-    padding: 0 10px;
-    position: relative;
-}
-
-.burger__menu {
-    border: none;
-    background: none;
-    font-size: 16px;
-    margin: 0;
-    padding: 0 5px;
-    position: relative;
+    max-width: 50%;
+    h1 {
+        font-size: 1.5em;
+    }
+    .nav__list {
+        display: flex;
+        justify-content: space-between;
+        align-content: center;
+        height: 30px;
+        padding: 0;
+        margin: 0;
+        &:first-child {
+            padding-left: 3px;
+        }
+        .nav__link {
+            list-style-type: none;
+            margin: 0;
+            a {
+                font-size: 12px;
+                text-decoration: none;
+                font-weight: 700;
+                color: $headerBase;
+                padding-right: 10px;
+                &:hover {
+                    color: $headerHover;
+                }
+            }
+            .menu__button {
+                border: none;
+                background: none;
+                font-size: 16px;
+                margin: 0;
+                padding: 0 10px;
+                position: relative;
+            }
+            .burger__menu {
+                border: none;
+                background: none;
+                font-size: 16px;
+                margin: 0;
+                padding: 0 5px;
+                position: relative;
+            }
+        }
+    }
 }
