--- a/styles/sass/_variables.scss
+++ b/styles/sass/_variables.scss
@@ -10,7 +10,7 @@ serif;
 
 /*Header Colours*/
 
-$headerBase: #000000;
-$headerHover: #64A604;
+$primary: #000000;
+$secondary: #64A604;
 $footerBackground: #2E2E2E;
 $footerPrimary: #999999;
