--- a/styles/sass/_footer.scss
+++ b/styles/sass/_footer.scss
@@ -1,3 +1,24 @@
 @import 'setup';
 @import 'mixins';
 @import 'variables';
+footer {
+    background-color: $footerBackground;
+    color: $footerPrimary;
+    margin: 0 auto;
+    padding: 0;
+    .footer__section {
+        padding: 20px 0;
+    }
+    .footer__nav {
+        padding: 0;
+        li {
+            list-style: none;
+            text-decoration: none;
+            margin: 0;
+            padding: 0;
+        }
+    }
+    h2 {
+        color: $secondary;
+    }
+}
