--- a/styles/sass/_homePage.scss
+++ b/styles/sass/_homePage.scss
@@ -4,6 +4,7 @@
 @import 'header';
 @import 'media';
 @import 'general';
+@import 'setup';
 .home__header {
     @include headBanner(url(../assets/home-1.jpeg));
 }
@@ -11,9 +12,74 @@
 section {
     display: flex;
     width: 100%;
-    img {
-        display: block;
+    flex-wrap: wrap;
+}
+
+.blog__section {
+    display: flex;
+    flex-wrap: wrap;
+    width: 100%;
+    .blog {
+        width: 75%;
+        h2 {
+            margin: 0 auto;
+            padding: 30px 20px;
+        }
+        h2::after {
+            content: "";
+            width: 20%;
+            height: 4px;
+            background: $secondary;
+            display: block;
+        }
+        p {
+            text-align: center;
+        }
+        .blognav__button {
+            background: $secondary;
+            color: #fff;
+            border: none;
+            width: 25%;
+            height: 35px;
+            max-width: 500px;
+            text-transform: uppercase;
+            font-family: $headFont;
+            font-weight: 600;
+        }
+    }
+    .blog__img {
         width: 100%;
         height: auto;
+        display: block;
+    }
+}
+
+.blog__section2 {
+    display: flex;
+    flex-direction: column-reverse;
+    .blog__nav li {
+        list-style: none;
+        display: flex;
+        a {
+            display: flex;
+            flex-direction: column;
+            text-decoration: none;
+            color: $baseFont;
+        }
+    }
+    .blog__img {
+        width: 100%;
+        height: auto;
+        display: block;
+    }
+}
+
+.main__restaurant__section {
+    .restaurant__section h2::after {
+        content: "";
+        width: 20%;
+        height: 4px;
+        background: $secondary;
+        display: block;
     }
 }
