--- a/styles/sass/_mixins.scss
+++ b/styles/sass/_mixins.scss
@@ -3,12 +3,14 @@
     background-image: $imgUrl;
     background-repeat: no-repeat;
     background-size: 100%;
+    background-position: center;
     font-family: $headFont;
     font-size: 24px;
     line-height: 24px;
     letter-spacing: 1.1px;
-    color: $headerBase;
+    color: $primary;
     text-transform: uppercase;
     height: 100vh;
     width: 100%;
+    margin: 0 auto;
 }
