--- a/styles/sass/_variables.scss
+++ b/styles/sass/_variables.scss
@@ -12,5 +12,7 @@ serif;
 
 $primary: #000000;
 $secondary: #64A604;
+$tertiary: #F2F2F2;
+$accent: #999999;
 $footerBackground: #2E2E2E;
 $footerPrimary: #999999;
