--- a/styles/sass/_contactPage.scss
+++ b/styles/sass/_contactPage.scss
@@ -6,4 +6,95 @@
 @import 'general';
 .contact__header {
     @include headBanner(url(../assets/contact-1.jpeg));
+    height: 60vh;
+}
+
+.contact__container {
+    display: flex;
+    height: 80vh;
+}
+
+.contact__wrap {
+    width: 50%;
+    padding: 50px 50px 50px 25%;
+    .contact__wrap--form {
+        margin-right: 0;
+        h2 {
+            padding: 15px;
+        }
+        width: 100%;
+        height: auto;
+        form {
+            button {
+                display: flex;
+                background: none;
+                border: none;
+                color: $secondary;
+                text-transform: uppercase;
+                width: 200px;
+                margin: 0;
+                padding: 10px;
+                height: 50px;
+                font-family: $headFont;
+                font-weight: 600;
+                i {
+                    color: $secondary;
+                    font-size: 16px;
+                    height: 50px;
+                    width: 50px;
+                }
+            }
+        }
+        fieldset {
+            input {
+                margin-bottom: 20px;
+                font-family: $baseFont;
+            }
+            input[type=text],
+            input[type=email] {
+                height: 40px;
+                background-color: #f2f2f2;
+                border: none;
+                padding: 10px;
+            }
+            input[name=name],
+            input[type=email] {
+                width: 49%;
+            }
+            input[name=name] {
+                margin-right: 1%;
+            }
+            input[name=subject] {
+                width: 100%;
+            }
+            input[type=textarea] {
+                width: 100%;
+                height: 200px;
+                border: none;
+                background-color: #f2f2f2;
+            }
+            border: none;
+            width: 100%;
+        }
+    }
+}
+
+.contact__copy {
+    width: 40%;
+    background-color: #f2f2f2;
+    .contact__copy--box {
+        padding: 40px;
+        margin: 20px;
+        width: 80%;
+    }
+}
+
+.banner {
+    width: 100%;
+    height: 50vh;
+    background-image: url(../assets/contact-2.jpeg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    margin: 0;
+    padding: 0;
 }
