--- a/styles/sass/_footer.scss
+++ b/styles/sass/_footer.scss
@@ -2,12 +2,41 @@
 @import 'mixins';
 @import 'variables';
 footer {
+    .foot__wrapper {
+        width: 100%;
+        height: auto;
+    }
+    display: flex;
+    flex-direction: column;
     background-color: $footerBackground;
     color: $footerPrimary;
     margin: 0 auto;
     padding: 0;
     .footer__section {
-        padding: 20px 0;
+        padding: 20px;
+        margin: 20px;
+    }
+    .foot__section1,
+    .foot__section2,
+    .foot__section3 {
+        width: 33%;
+    }
+    .foot__section1 {
+        h2 {
+            border: none;
+        }
+        li {
+            padding: 25px 25px 25px 0;
+            border-bottom: 1px solid rgba(236, 236, 236, 0.28);
+            width: 75%;
+            text-align: left;
+            p {
+                padding: 20px 0;
+            }
+        }
+         :last-child {
+            border: none;
+        }
     }
     .footer__nav {
         padding: 0;
@@ -21,4 +50,101 @@ footer {
     h2 {
         color: $secondary;
     }
+    .foot__wrapper {
+        display: flex;
+        overflow: none;
+    }
+}
+
+.foot__section2 {
+    ul {
+        li {
+            padding: 10px 10px 10px 0;
+            border-bottom: 1px solid rgba(236, 236, 236, 0.28);
+            width: 75%;
+            text-align: left;
+        }
+         :last-child {
+            border: none;
+        }
+    }
+}
+
+.foot__section3 {
+    p {
+        padding-top: 20px;
+    }
+    form {
+        display: flex;
+        align-items: flex-start;
+        input[type=email] {
+            height: 40px;
+            margin: 0;
+            border: none;
+            padding-left: 10px;
+            background-color: #565656;
+            color: #999999;
+            font-family: $baseFont;
+            font-style: italic;
+        }
+        button[type=submit] {
+            border: none;
+            padding: 0px;
+            margin: 0;
+            background-color: $secondary;
+            color: #FFF;
+            width: 40px;
+            height: 40px;
+            font-size: 16px;
+            text-decoration: none;
+            i {
+                color: #FFF;
+                margin: 0;
+                padding: 0;
+                height: 40px;
+                display: block;
+                font-size: 16px;
+            }
+        }
+        padding: 30px 30px 30px 0;
+        border-bottom: 1px solid rgba(236, 236, 236, 0.28);
+    }
+}
+
+.foot__nav3 {
+    display: flex;
+    height: 40px;
+    width: 50%;
+    max-width: 50%;
+    li {
+        padding: 0;
+        margin: 0;
+        height: 40px;
+        width: 40px;
+    }
+    li i {
+        color: #FFF;
+        width: 100%;
+        height: auto;
+        display: inline-block;
+    }
+}
+
+.footer__copy {
+    height: 50px;
+    padding-bottom: 0;
+    background-color: $primary;
+    span {
+        font-family: $headFont;
+        font-weight: 600;
+        color: $secondary;
+    }
+    padding: 10px;
+    width: 100%;
+    margin: 0;
+    p {
+        text-align: center;
+        position: relative;
+    }
+    position: absolute;
 }
