--- a/styles/sass/_general.scss
+++ b/styles/sass/_general.scss
@@ -1,6 +1,10 @@
 @import 'setup';
 @import 'mixins';
 @import 'variables';
+html {
+    min-width: 300px;
+}
+
 .wrapper {
     width: 95%;
     max-width: 1200px;
@@ -18,9 +22,19 @@ h4 {
 
 body {
     font-family: $baseFont;
+    font-size: 12px;
 }
 
 main,
 section {
     margin: 0 auto;
+    line-height: 0.3px;
+}
+
+li {
+    list-style-type: none;
+}
+
+a {
+    text-decoration: none;
 }
