--- a/styles/sass/_header.scss
+++ b/styles/sass/_header.scss
@@ -1,25 +1,52 @@
 @import 'variables';
 @import 'general';
+header {
+    font-family: $headFont;
+    font-size: 24px;
+    line-height: 24px;
+    letter-spacing: 1.1px;
+    color: $primary;
+    text-transform: uppercase;
+    height: 100vh;
+    width: 100%;
+    margin: 0 auto;
+}
+
 .nav__wrapper {
     display: flex;
+    flex-wrap: wrap;
     flex-direction: row;
     align-content: center;
-    justify-content: space-around;
-    position: relative;
+    justify-content: space-between;
+}
+
+.nav__wrapper {
+    justify-content: space-between;
+    width: 98%;
+    margin: 0 auto;
+    max-width: 1400px;
+}
+
+.nav__list {
+    padding-top: 30px;
+    .nav__link.burger__menu {
+        height: 0;
+        overflow: hidden;
+    }
 }
 
 .head__nav {
     height: 50px;
-    width: 100%;
+    width: 65%;
     h1 {
         font-size: 2.5rem;
-        position: relative;
+        width: 50%;
     }
     .nav__list {
-        width: 75%;
+        width: 100%;
         display: flex;
         flex-wrap: wrap;
-        justify-content: space-between;
+        justify-content: space-evenly;
         align-content: center;
         height: 30px;
         padding: 0;
