--- a/styles/sass/_media.scss
+++ b/styles/sass/_media.scss
@@ -1,59 +1,250 @@
-@media (min-width:1024px) {
-    .nav__wrapper {
-        justify-content: space-between;
-    }
-    .nav__list {
-        padding-top: 30px;
-    }
-    .blog__item,
-    .blog__img {
-        width: 50%;
-    }
-}
-
-@media (min-width:768px) {
-    .nav__wrapper {
-        justify-content: space-around;
-        flex-direction: column;
-    }
-    .blog__item,
-    .blog__img {
-        width: 50%;
-    }
-    .blog__section {
-        flex-direction: row;
-        flex-wrap: wrap;
-    }
-}
-
-@media (min-width:320px) {
-    .nav__wrapper {
-        flex-direction: column;
-        h1 {
-            font-size: 1.5rem;
-        }
-    }
-    .blog__section,
-    .blog__section2 {
-        height: 100vh;
-        position: relative;
-    }
-    .nav__list {
-        max-width: 65%;
-        display: none;
-        .nav__button {
-            display: block;
-        }
-        padding: 0;
-        margin: 0;
-    }
-    .blog__section {
-        flex-direction: column;
-    }
-    .blog__item {
-        width: 100%;
-    }
-    .blog__img {
-        width: 100%;
-    }
-}
+                        @media (max-width: 940px) {
+                            .nav__wrapper {
+                                justify-content: space-between;
+                            }
+                            .nav__list {
+                                padding-top: 30px;
+                                .nav__link.burger__menu {
+                                    height: 0;
+                                    overflow: hidden;
+                                }
+                            }
+                        }
+                        
+                        @media (max-width: 768px) {
+                            .nav__wrapper {
+                                justify-content: space-around;
+                                flex-direction: column;
+                            }
+                            .nav__link {
+                                display: none;
+                            }
+                            .nav__link.burger__menu {
+                                height: 40px;
+                                overflow: visible;
+                            }
+                            .main__blog__section {
+                                display: flex;
+                                flex-direction: column;
+                                .blog__section2--item2 {
+                                    order: 2;
+                                }
+                                .blog__section2--item1 {
+                                    order: 3;
+                                }
+                                .blog__section1--item2,
+                                .blog__section--item1 {
+                                    order: 1;
+                                }
+                            }
+                            .restaurant__section {
+                                padding: 20px;
+                            }
+                            .gallery {
+                                display: flex;
+                                flex-direction: column;
+                            }
+                            .leavecomment--form {
+                                fieldset {
+                                    flex-direction: column;
+                                    input[name=name],
+                                    input[name=email],
+                                    input[name=website] {
+                                        width: 100%;
+                                    }
+                                }
+                            }
+                            .contact__container {
+                                display: flex;
+                                flex-direction: column;
+                                width: 100%;
+                                height: auto;
+                                .contact__wrap {
+                                    width: 100%;
+                                    padding: 20px;
+                                    margin: 20px auto;
+                                    height: auto;
+                                    .contact__wrap--form {
+                                        width: 80%;
+                                        fieldset {
+                                            border: none;
+                                            width: 100%;
+                                        }
+                                    }
+                                }
+                                .contact__copy {
+                                    width: 100%;
+                                    height: auto;
+                                    background-color: #f2f2f2;
+                                    .contact__copy--box {
+                                        padding: 20px;
+                                        width: 80%;
+                                        max-height: 300px;
+                                    }
+                                }
+                            }
+                            .banner {
+                                width: 100%;
+                                height: 200px;
+                                display: block;
+                                background-size: cover;
+                                background-position: center;
+                            }
+                            .contact__wrap--form {
+                                fieldset {
+                                    input[name=name],
+                                    input[type=email] {
+                                        width: 100%;
+                                        margin: 0 0 20px 0;
+                                    }
+                                }
+                            }
+                            footer {
+                                height: auto;
+                                margin: 0;
+                                .footer_section {
+                                    height: 100vh;
+                                    width: 100%;
+                                }
+                                .foot__section1,
+                                .foot__section2,
+                                .foot__section3 {
+                                    width: 100%;
+                                }
+                            }
+                            .foot__wrapper {
+                                display: flex;
+                                flex-direction: column;
+                            }
+                        }
+                        
+                        @media (max-width: 480px) {
+                            .nav__wrapper {
+                                flex-direction: column;
+                                h1 {
+                                    font-size: 1.5rem;
+                                }
+                            }
+                            .nav__list {
+                                max-width: 65%;
+                                display: none;
+                                .nav__button {
+                                    display: block;
+                                }
+                                padding: 0;
+                                margin: 0;
+                                .nav__link {
+                                    display: none;
+                                }
+                            }
+                            .main__blog__section {
+                                display: flex;
+                                flex-direction: column;
+                                .blog__section2--item2 {
+                                    order: 2;
+                                }
+                                .blog__section2--item1 {
+                                    order: 3;
+                                }
+                                .blog__section1--item2,
+                                .blog__section--item1 {
+                                    order: 1;
+                                }
+                            }
+                            .restaurant__section {
+                                padding: 20px;
+                            }
+                            .blog__section {
+                                flex-direction: column;
+                            }
+                            .blog__item {
+                                width: 100%;
+                            }
+                            .gallery {
+                                .gallery {
+                                    display: flex;
+                                    flex-direction: column;
+                                }
+                            }
+                            .leavecomment--form {
+                                fieldset {
+                                    flex-direction: column;
+                                    input[name=name],
+                                    input[name=email],
+                                    input[name=website] {
+                                        width: 100%;
+                                    }
+                                    width: 100%;
+                                }
+                            }
+                            .contact__container {
+                                display: flex;
+                                flex-direction: column;
+                                width: 100%;
+                                height: auto;
+                                .contact__wrap {
+                                    width: 100%;
+                                    padding: 50px;
+                                    height: auto;
+                                    .contact__wrap--form {
+                                        width: 80%;
+                                        height: 100%;
+                                        padding: 20px;
+                                        fieldset {
+                                            border: none;
+                                            width: 100%;
+                                        }
+                                    }
+                                }
+                                .contact__copy--box {
+                                    padding: 20px;
+                                    margin: 20px;
+                                    width: 80%;
+                                    max-height: 300px;
+                                }
+                                .contact__wrap--form {
+                                    fieldset {
+                                        input[name=name],
+                                        input[type=email] {
+                                            width: 100%;
+                                            margin: 0 0 20px 0;
+                                        }
+                                    }
+                                }
+                                .contact__copy {
+                                    width: 100%;
+                                    height: 100%;
+                                    padding: 20px 0;
+                                    background-color: #f2f2f2;
+                                    .contact__copy--box {
+                                        padding: 40px;
+                                        width: 80%;
+                                    }
+                                }
+                                .blog__img {
+                                    width: 100%;
+                                    height: auto;
+                                    display: block;
+                                }
+                            }
+                            .banner {
+                                width: 100%;
+                                height: 200px;
+                                display: block;
+                                background-size: cover;
+                                background-position: center;
+                            }
+                            footer {
+                                height: auto;
+                                margin: 0;
+                                .footer_section {
+                                    height: 100vh;
+                                    width: 100%
+                                }
+                                .foot__section1,
+                                .foot__section2,
+                                .foot__section3 {
+                                    width: 100%;
+                                }
+                            }
+                        }
