--- a/styles/sass/_general.scss
+++ b/styles/sass/_general.scss
@@ -13,7 +13,8 @@ html {
 
 p,
 li,
-a {
+a,
+i {
     line-height: 24px;
     letter-spacing: 0.3px;
 }
@@ -30,6 +31,8 @@ h4 {
 body {
     font-family: $baseFont;
     font-size: 12px;
+    line-height: 24px;
+    letter-spacing: 0.3px;
 }
 
 main,
