--- a/styles/sass/_footer.scss
+++ b/styles/sass/_footer.scss
@@ -121,12 +121,22 @@ footer {
         margin: 0;
         height: 40px;
         width: 40px;
+        position: relative;
     }
-    li i {
+    button {
         color: #FFF;
         width: 100%;
         height: auto;
-        display: inline-block;
+        font-size: 20px;
+        text-align: center;
+        display: block;
+        position: relative;
+        padding: 20px;
+        .fa-long-arrow-alt-right {
+            font-size: 20px;
+            height: 20px;
+            width: 40px;
+        }
     }
 }
 
@@ -145,6 +155,7 @@ footer {
     p {
         text-align: center;
         position: relative;
+        margin: 0;
     }
     position: absolute;
 }
