--- a/styles/sass/_header.scss
+++ b/styles/sass/_header.scss
@@ -50,7 +50,7 @@ header {
         align-content: center;
         height: 30px;
         padding: 0;
-        margin: 0;
+        margin-top: 20px;
         &:first-child {
             padding-left: 3px;
         }
@@ -87,6 +87,11 @@ header {
                 margin: 0;
                 padding: 0 5px;
                 position: relative;
+            }
+            .nav__link.burger__menu {
+                height: 0;
+                width: 0;
+                overflow: hidden;
             }
         }
     }
