--- a/styles/sass/_media.scss
+++ b/styles/sass/_media.scss
@@ -6,6 +6,7 @@
                                 padding-top: 30px;
                                 .nav__link.burger__menu {
                                     height: 0;
+                                    width: 0;
                                     overflow: hidden;
                                 }
                             }
