--- a/styles/sass/_header.scss
+++ b/styles/sass/_header.scss
@@ -27,14 +27,6 @@ header {
     max-width: 1400px;
 }
 
-.nav__list {
-    padding-top: 30px;
-    .nav__link.burger__menu {
-        height: 0;
-        overflow: hidden;
-    }
-}
-
 .head__nav {
     height: 50px;
     width: 65%;
@@ -42,57 +34,51 @@ header {
         font-size: 2.5rem;
         width: 50%;
     }
-    .nav__list {
-        width: 100%;
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: space-evenly;
-        align-content: center;
-        height: 30px;
-        padding: 0;
-        margin-top: 20px;
-        &:first-child {
-            padding-left: 3px;
-        }
-        &:last-child {
-            padding-right: 0;
-        }
-        .nav__link {
-            list-style-type: none;
-            margin: 0;
-            a {
-                font-size: 12px;
-                text-decoration: none;
-                font-weight: 700;
-                color: $primary;
-                padding-right: 10px;
-                &:hover {
-                    color: $secondary;
-                }
-                padding: 0 10px 0 0;
-                margin: 0;
-            }
-            .menu__button {
-                border: none;
-                background: none;
-                font-size: 16px;
-                margin: 0;
-                padding: 0 10px;
-                position: relative;
-            }
-            .burger__menu {
-                border: none;
-                background: none;
-                font-size: 16px;
-                margin: 0;
-                padding: 0 5px;
-                position: relative;
-            }
-            .nav__link.burger__menu {
-                height: 0;
-                width: 0;
-                overflow: hidden;
-            }
-        }
+}
+
+.nav__list {
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    align-content: center;
+    height: 30px;
+    padding: 0;
+    padding-top: 30px;
+    margin-top: 20px;
+    &:first-child {
+        padding-left: 3px;
     }
+    &:last-child {
+        padding-right: 0;
+    }
+}
+
+.nav__link {
+    list-style-type: none;
+    margin: 0;
+    a {
+        font-size: 12px;
+        text-decoration: none;
+        font-weight: 700;
+        color: $primary;
+        padding-right: 10px;
+        &:hover {
+            color: $secondary;
+        }
+        padding: 0 10px 0 0;
+        margin: 0;
+    }
+    .menu__button {
+        border: none;
+        background: none;
+        font-size: 16px;
+        margin: 0;
+        padding: 0 10px;
+        position: relative;
+    }
+}
+
+.burger__menu {
+    display: none;
 }
