--- a/styles/sass/_media.scss
+++ b/styles/sass/_media.scss
@@ -4,25 +4,68 @@
                             }
                             .nav__list {
                                 padding-top: 30px;
-                                .nav__link.burger__menu {
-                                    height: 0;
-                                    width: 0;
-                                    overflow: hidden;
-                                }
+                            }
+                            .burger__menu {
+                                display: none;
                             }
                         }
                         
                         @media (max-width: 768px) {
+                            .head__nav {
+                                overflow: hidden;
+                            }
+                            .nav__list {
+                                width: 100%;
+                                display: none;
+                                flex-direction: column;
+                                flex-wrap: wrap;
+                                justify-content: space-evenly;
+                                align-content: center;
+                                height: 30px;
+                                padding: 0;
+                                padding-top: 30px;
+                                margin-top: 20px;
+                                &:first-child {
+                                    padding-left: 3px;
+                                }
+                                &:last-child {
+                                    padding-right: 0;
+                                }
+                            }
+                            .nav__list--toggle {
+                                width: 50%;
+                                display: flex;
+                                height: 600px;
+                                flex-direction: column;
+                                flex-wrap: wrap;
+                                align-content: left;
+                                padding-left: 0;
+                                padding-top: 10px;
+                                margin-top: 20px;
+                                .nav__link {
+                                    padding: 0 50px 0 0;
+                                }
+                                &:first-child {
+                                    padding-left: 3px;
+                                }
+                                &:last-child {
+                                    padding-right: 0;
+                                }
+                            }
                             .nav__wrapper {
                                 justify-content: space-around;
                                 flex-direction: column;
                             }
-                            .nav__link {
-                                display: none;
-                            }
-                            .nav__link.burger__menu {
-                                height: 40px;
-                                overflow: visible;
+                            .burger__menu {
+                                display: block;
+                                background: none;
+                                border: none;
+                                padding-left: 0;
+                                margin: 0;
+                                i {
+                                    padding: 0;
+                                    margin: 0;
+                                }
                             }
                             .main__blog__section {
                                 display: flex;
@@ -120,22 +163,62 @@
                         }
                         
                         @media (max-width: 480px) {
+                            .head__nav {
+                                overflow: hidden;
+                            }
+                            .nav__list {
+                                width: 100%;
+                                display: none;
+                                flex-wrap: wrap;
+                                flex-direction: column;
+                                justify-content: space-evenly;
+                                align-content: center;
+                                height: 30px;
+                                padding: 0;
+                                padding-top: 30px;
+                                margin-top: 20px;
+                                &:first-child {
+                                    padding-left: 3px;
+                                }
+                                &:last-child {
+                                    padding-right: 0;
+                                }
+                            }
+                            .nav__list--toggle {
+                                width: 30%;
+                                display: flex;
+                                height: 600px;
+                                flex-direction: column;
+                                flex-wrap: wrap;
+                                align-content: center;
+                                padding-left: 0;
+                                padding-top: 10px;
+                                margin-top: 20px;
+                                .nav__link {
+                                    padding: 0 50px 0 0;
+                                }
+                                &:first-child {
+                                    padding-left: 3px;
+                                }
+                                &:last-child {
+                                    padding-right: 0;
+                                }
+                            }
                             .nav__wrapper {
                                 flex-direction: column;
                                 h1 {
                                     font-size: 1.5rem;
                                 }
                             }
-                            .nav__list {
-                                max-width: 65%;
-                                display: none;
-                                .nav__button {
-                                    display: block;
-                                }
-                                padding: 0;
+                            .burger__menu {
+                                display: block;
+                                background: none;
+                                border: none;
+                                padding-left: 0;
                                 margin: 0;
-                                .nav__link {
-                                    display: none;
+                                i {
+                                    padding: 0;
+                                    margin: 0;
                                 }
                             }
                             .main__blog__section {
